--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
                 <button class="back-btn">← Geri</button>
             </div>
         </main>
+
+        <!-- Sayfa Altı Bilgisi -->
+        <footer class="footer-credit animated">
+            Created by Murat Özgür Ünal
+        </footer>
     </div>
     <script src="script.js"></script>
 </body>
